--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.4.0",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
-        "axios": "^0.21",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.7",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.6",
+        "postcss": "^8.4.49",
         "postcss-import": "^14.0.2",
-        "tailwindcss": "^3.0.18"
+        "tailwindcss": "^3.4.15"
     },
     "dependencies": {
-        "chart.js": "^4.4.1"
+        "chart.js": "^4.4.1",
+        "flowbite": "^2.5.2"
     }
 }
