--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Deploy via rsync
         uses: burnett01/rsync-deployments@7.0.2
         with:
-          switches: -avzr --delete
+          switches: -avzr --delete exclude= .env
           path: .
           remote_host: ${{ secrets.REMOTE_HOST }}
           remote_user: ${{ secrets.REMOTE_USER }}
@@ -29,12 +29,18 @@ jobs:
           key: ${{ secrets.REMOTE_KEY }}
           script: |
             cd ${{ secrets.REMOTE_PATH }}
+            
+            export PATH=$HOME/.composer/vendor/bin:$PATH
             composer install --no-interaction --prefer-dist --optimize-autoloader
             php artisan migrate --force
+            php artisan config:clear
             php artisan config:cache
             php artisan route:cache
             php artisan view:cache
             php artisan storage:link
+            
             chmod -R 775 storage bootstrap/cache
             chown -R www-data:www-data storage bootstrap/cache
+            
             php artisan queue:restart
+
